# uv-project-template

./: .env.tmpl  .gitignore  AGENTS.md  Dockerfile  Dockerfile.main  Dockerfile.test  README.md  compose.yml  pyproject.toml
tests/: example_test.py
uv_app/: __init__.py  __main__.py  example_util.py  settings.py
